--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,6 @@ extra_css:
 - 'stylesheets/extra.css'
 nav:
 - Home: 'index.md'
-- Build: 'build.md'
+- Building: 'build.md'
 - API:
   - 'Introduction' : 'introduction.md'
