--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ theme:
   logo: 'img/ssp21.png'    
 markdown_extensions:
   - admonition
+  - codehilite
 plugins:
   - markdownextradata
 extra_css:
@@ -18,7 +19,7 @@ nav:
 - Home: 'index.md'
 - Building: 'build.md'
 - API:
-  - 'Introduction' : 'api_intro.md'
-extra:
-  version: 'development'
-  base_doxygen_path: 'https://ssp21.github.io/ssp21-cpp/doxygen'
+  - 'Introduction' : 'api/intro.md'
+  - 'IExecutor' : 'api/executor.md'
+extra:  
+  base_doxygen_path: 'https://ssp21.github.io/ssp21-cpp/doxygen/development'
