--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,5 +21,6 @@ nav:
 - API:
   - 'Introduction' : 'api/intro.md'
   - 'IExecutor' : 'api/executor.md'
+  - 'Logging' : 'api/logging.md'
 extra:  
   base_doxygen_path: 'https://ssp21.github.io/ssp21-cpp/doxygen/development'
