add section on error handling

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
   - 'Introduction' : 'api/intro.md'
   - 'IExecutor' : 'api/executor.md'
   - 'Logging' : 'api/logging.md'
-  - 'Crypto' : 'api/crypto.md'
+  - 'ICryptoBackend' : 'api/crypto.md'
+  - 'Error Handling' : 'api/error_handling.md'
 extra:  
   base_doxygen_path: 'https://ssp21.github.io/ssp21-cpp/doxygen/development'
